// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`apis/AsyncStorage getItem should have same Promise behavior as react-native 1`] = `
Object {
  "age": 30,
  "name": "Chris",
  "traits": Object {
    "eyes": "brown",
    "hair": "brown",
  },
}
`;

exports[`apis/AsyncStorage getItem should have same callback behavior as react-native 1`] = `
Object {
  "age": 30,
  "name": "Chris",
  "traits": Object {
    "eyes": "brown",
    "hair": "brown",
  },
}
`;

exports[`apis/AsyncStorage mergeLocalStorageItem should have same behavior as react-native 1`] = `
Object {
  "age": 31,
  "name": "Chris",
  "traits": Object {
    "eyes": "blue",
    "hair": "brown",
    "shoe_size": 10,
  },
}
`;
